fix: Reduce spacing in Services section mobile version

--- a/interior-design/components/styles/services.module.scss
+++ b/interior-design/components/styles/services.module.scss
@@ -146,11 +146,11 @@
 
   .paragraphCard {
     font-size: 0.65rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.3rem;
   }
 
   .card_box ul li:last-child {
-    margin-bottom: 0.3rem;
+    margin-bottom: 0.2rem;
   }
 
   .card_container {
@@ -169,11 +169,11 @@
   }
 
   .card_name {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.3rem;
   }
 
   .headingThree {
-    margin-bottom: 0;
+    margin-bottom: 0.2rem;
   }
 
   .modal-container {
@@ -215,7 +215,7 @@
   }
 
   .card_btn {
-    margin-top: 0.5rem;
+    margin-top: 0.3rem;
     width: 100%;
     display: flex;
     justify-content: flex-start;
